[package]
name = "baekjoon"
version = "0.1.0"
edition = "2021"

[workspace]
members = [ "abs_heap", "baekjoon_1003", "baekjoon_1008", "baekjoon_1010", "baekjoon_10189", "baekjoon_10699", "baekjoon_10872", "baekjoon_11399", "baekjoon_11723", "baekjoon_1330", "baekjoon_1463", "baekjoon_15128", "baekjoon_15552", "baekjoon_1764", "baekjoon_24262", "baekjoon_2606", "baekjoon_27433", "baekjoon_28432", "baekjoon_28701", "baekjoon_30007", "baekjoon_3046", "baekjoon_5656", "dual_priority_queue", "maximum_hip", "middle_nomber", "minimum_hip","normal_backpack", "sorting_cards", "thief_jewel", "workbook"]

[dependencies]
