[package]
name = "baekjoon"
version = "0.1.0"
edition = "2021"

[workspace]
members = [ "abs_heap", "baekjoon_1003", "baekjoon_10039", "baekjoon_1008", "baekjoon_1010", "baekjoon_1012", "baekjoon_10156", "baekjoon_10189", "baekjoon_10699", "baekjoon_1074", "baekjoon_10872", "baekjoon_10951", "baekjoon_11399", "baekjoon_11659", "baekjoon_11723", "baekjoon_11724", "baekjoon_11726", "baekjoon_1330", "baekjoon_1463", "baekjoon_15059", "baekjoon_15128", "baekjoon_15552", "baekjoon_15650", "baekjoon_15700", "baekjoon_1697", "baekjoon_1764", "baekjoon_18870", "baekjoon_24262", "baekjoon_2606", "baekjoon_2630", "baekjoon_27433", "baekjoon_2805", "baekjoon_28432", "baekjoon_28444", "baekjoon_28701", "baekjoon_30007", "baekjoon_30030", "baekjoon_3040", "baekjoon_3046", "baekjoon_31450", "baekjoon_5656", "baekjoon_6778", "baekjoon_7287", "baekjoon_9095", "baekjoon_9366", "dual_priority_queue", "maximum_hip", "middle_nomber", "minimum_hip","normal_backpack", "sorting_cards", "thief_jewel", "workbook"]

[dependencies]
